Fix de la mise en cache des coordonnées